<resources>
    <string name="app_name">Job_a2z</string>
    <string name="facebook_application_id" translatable="false">363868704222074</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb363868704222074</string>

    <string name="devName">Developed by Soft Sketch</string>
    <string name="objectivesNote">A mcq based application to improve your job preparation</string>

    <string name="title_activity_wellcome_">Wellcome_Activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_subject">Subjects</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="gknowledge">সাধারণ জ্ঞান</string>
    <string name="english">ইংরেজী</string>
    <string name="math">গণিত</string>
    <string name="bangla">বাংলা</string>
    <string name="subject">পছন্দের বিষয় বেছে নিন</string>
    <string name="adminLoginNote">Admin Login Panel</string>

</resources>
