<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_marginRight="32dp"
    android:layout_marginLeft="32dp"
    app:cardElevation="5dp"
    android:background="@drawable/background"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Here Qeustion will be set!!!"
            android:id="@+id/questionTV_id"
            android:textColor="@color/colorPrimary"
            android:padding="8dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:id="@+id/optionGroup_id">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/opt1"
                android:checked="false"
                android:text="@string/english"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/opt2"
                android:checked="false"
                android:text="@string/math"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/opt3"
                android:checked="false"
                android:text="@string/bangla"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/opt4"
                android:checked="false"
                android:text="@string/gknowledge"/>
        </RadioGroup>
    </LinearLayout>


</android.support.v7.widget.CardView>